# hatchet-mcp

./: .gitignore  .mcp.json.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/hooks/: docs-lint.py  regen-spec-trace.py  update-last-updated.py
.claude/skills/new-spec/: SKILL.md
.claude/skills/new-spec/references/: adr.md  spec.md
.claude/skills/new-spec/templates/: adr.md  spec.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-sync.yml  docs.yml  publish.yml
docs/: CONVENTIONS.md
docs/design/v0.2.0/: reliability-research.md
docs/design/v0.3.0/: operational-toolkit-expansion-research.md
docs/implementation/: frontmatter-schema-v2.md
docs/init/: README.md  authentication-and-connection.md  mcp-server-design.md  multitenancy-and-dependencies.md  overview-and-concepts.md  rest-api-reference.md  sdk-and-communication.md
docs/roadmap/: README.md
docs/roadmap/v0.2.0/: reliability.md
docs/roadmap/v0.3.0/: operational-toolkit-expansion.md
docs/traces/: coverage.md
scripts/: _doc_lint.py  generate_spec_trace.py  lint_docs.py
src/hatchet_mcp/: __init__.py  _logging.py  _shared.py  app.py  client.py  config.py  prompts.py  resources.py  server.py
src/hatchet_mcp/tools/: __init__.py  events.py  filters.py  meta.py  observability.py  runs.py  schedules.py  server_info.py  tasks.py  webhooks.py  workers.py  workflows.py
tests/: conftest.py  test_bulk_safety.py  test_config.py  test_emitter.py  test_gating.py  test_limits.py  test_list_filters.py  test_logging.py  test_new_tools_smoke.py  test_parsing.py  test_payload_minimization.py  test_regressions.py  test_reliability.py  test_resources_prompts.py  test_reverify_gaps.py  test_sdk_contract.py  test_serialization.py  test_server_info.py
