[project]
name = "hatchet-mcp"
version = "0.3.0"
description = "Operational MCP server for Hatchet — read-only by default, with opt-in run control over the Hatchet REST API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DanMeon" }]
keywords = ["hatchet", "mcp", "model-context-protocol", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp>=1.2.0",
    "hatchet-sdk>=1.33.5",
]

[project.scripts]
hatchet-mcp = "hatchet_mcp.server:main"

[project.urls]
Homepage = "https://github.com/DanMeon/hatchet-mcp"
Repository = "https://github.com/DanMeon/hatchet-mcp"
Issues = "https://github.com/DanMeon/hatchet-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hatchet_mcp"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.390",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "spec(spec_id): map a test to an acceptance criterion in docs/roadmap/<vX.Y.Z>/<topic>.md (format 'vX.Y.Z/topic#AC-N'). See docs/CONVENTIONS.md § Trace Report.",
]
